<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Solar"
            android:textSize="36sp"
            android:textStyle="bold"
            android:paddingTop="15dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/latitude_edittext"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:hint="@string/Latitud"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/longitude_edittext"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:hint="@string/Longitud"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/area_edittext"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:hint="@string/Area"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:importantForAutofill="no"
            android:layout_marginBottom="16dp"/>

        <SeekBar
            android:id="@+id/inclination_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="90"
            android:progress="30"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/inclination_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Inclinacion"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Calcular"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="32dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
